implement first name and last name feature parity with chancejs